--- a/html/login.html
+++ b/html/login.html
@@ -15,6 +15,11 @@
     <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/roboto-mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="../css/style.css">
     <title>Nekzus Game Store</title>
 </head>
@@ -35,15 +40,44 @@
         </div>
     </header>
     <!-- Menu de navegacion -->
-    <nav class="navbar">
-        <ul class="listInline">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./products.html">Productos</a></li>
-            <li><a href="./contact.html">Contacto</a></li>
-            <li><a href="./login.html">Ingreso</a></li>
-            <li><a href="./register.html">Registro</a></li>
-            <li><a href="./cart.html">Carrito</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="cart nav-item mb-2 mb-lg-0">
+                <a class="nav-link" aria-current="page" href="./cart.html"><i class="bi bi-cart-fill"></i></a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./products.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./contact.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./login.html">Ingreso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./register.html">Registro</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="cartBar nav-link" aria-current="page" href="./cart.html"><i
+                                class="bi bi-cart-fill"></i></a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </div>
     </nav>
     <main>
         <!-- Formulario de inicio de sesión -->
@@ -53,16 +87,16 @@
             </div>
             <div class="formGroup centerItemsGrid">
                 <h3>Introduce los datos de tu cuenta</h3>
-                <form action="" class="form formLogin">
-                    <div class="camp">
-                        <label for="email">Correo</label>
-                        <input type="email" id="email" placeholder="Correo" required>
+                <form>
+                    <div class="mb-3 camp">
+                        <label for="exampleInputEmail1" class="form-label">E-mail usuario</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo electronico">
                     </div>
-                    <div class="camp">
-                        <label for="password">Contraseña</label>
-                        <input type="password" id="password" placeholder="Contraseña" required>
+                    <div class="mb-3 camp">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
                     </div>
-                    <button class="btnSubmit" type="submit">Iniciar sesión</button>
+                    <button type="submit" class="btn btn-outline-info">Iniciar sesión</button>
                     <p>¿No tienes cuenta?<a href="./register.html"> Registrate</a></p>
                 </form>
             </div>
@@ -89,12 +123,12 @@
                 </div>
                 <div>
                     <h3>Síguenos en:</h3>
-                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><img
-                            src="../images/logotipo_youtube.png" alt="youtube icon"></a>
-                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><img
-                            src="../images/logo_facebook.png" alt="facebook icon"></a>
-                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><img
-                            src="../images/logotipo_instagram.png" alt="instagram icon"></a>
+                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i id="youtube"
+                            class="bi bi-youtube"></i></a>
+                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><i id="facebook"
+                            class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i id="instagram"
+                            class="bi bi-instagram"></i></a>
                 </div>
                 <div>
                     <h3>Contacto</h3>
