--- a/html/products.html
+++ b/html/products.html
@@ -15,6 +15,11 @@
     <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/roboto-mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="../css/style.css">
     <title>Nekzus Game Store</title>
 </head>
@@ -35,15 +40,43 @@
         </div>
     </header>
     <!-- Menu de navegacion -->
-    <nav class="navbar">
-        <ul class="listInline">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./products.html">Productos</a></li>
-            <li><a href="./contact.html">Contacto</a></li>
-            <li><a href="./login.html">Ingreso</a></li>
-            <li><a href="./register.html">Registro</a></li>
-            <li><a href="./cart.html">Carrito</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="cart nav-item mb-2 mb-lg-0">
+                <a class="nav-link" aria-current="page" href="./cart.html"><i class="bi bi-cart-fill"></i></a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./products.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./contact.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./login.html">Ingreso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./register.html">Registro</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="cartBar nav-link" aria-current="page" href="./cart.html"><i class="bi bi-cart-fill"></i></a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </div>
     </nav>
     <main>
         <!-- Listado de productos -->
@@ -70,125 +103,165 @@
                 </select>
             </section>
             <!-- Productos -->
-            <div class="productCard">
-                <img src="../images/pda_Tomb Raider (2013).webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product1">
+                <img src="../images/pda_Tomb Raider (2013).webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_The Witcher 3 Wild Hunt.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product2">
+                <img src="../images/pda_The Witcher 3 Wild Hunt.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Red Dead Redemption 2.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product3">
+                <img src="../images/pda_Red Dead Redemption 2.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Portal.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product4">
+                <img src="../images/pda_Portal.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Portal 2.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product5">
+                <img src="../images/pda_Portal 2.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_PAYDAY 2.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product6">
+                <img src="../images/pda_PAYDAY 2.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Limbo.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product7">
+                <img src="../images/pda_Limbo.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Life is Strange.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product8">
+                <img src="../images/pda_Life is Strange.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Left 4 Dead 2.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product9">
+                <img src="../images/pda_Left 4 Dead 2.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Hitman 3.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product10">
+                <img src="../images/pda_Hitman 3.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Grand Theft Auto V.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product11">
+                <img src="../images/pda_Grand Theft Auto V.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Forza Horizon 5.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product12">
+                <img src="../images/pda_Forza Horizon 5.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Fallout 4.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product13">
+                <img src="../images/pda_Fallout 4.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_DOOM (2016).webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product14">
+                <img src="../images/pda_DOOM (2016).webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Destiny 2.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product15">
+                <img src="../images/pda_Destiny 2.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Counter-Strike Global.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product16">
+                <img src="../images/pda_Counter-Strike Global.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_COD Modern Warfare.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product17">
+                <img src="../images/pda_COD Modern Warfare.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_Borderlands 2.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product18">
+                <img src="../images/pda_Borderlands 2.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_BioShock.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product19">
+                <img src="../images/pda_BioShock.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
-            <div class="productCard">
-                <img src="../images/pda_BioShock Infinite.webp" alt="producto">
-                <h4>Producto</h4>
-                <p>$5000</p>
-                <button type="submit" class="btnAddcart">Agregar al carrito</button>
+            <div class="productCardHome card product20">
+                <img src="../images/pda_BioShock Infinite.webp" class="card-img-top" alt="producto" />
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">$5000</p>
+                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                </div>
             </div>
         </section>
     </main>
@@ -213,12 +286,9 @@
                 </div>
                 <div>
                     <h3>Síguenos en:</h3>
-                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><img
-                            src="../images/logotipo_youtube.png" alt="youtube icon"></a>
-                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><img
-                            src="../images/logo_facebook.png" alt="facebook icon"></a>
-                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><img
-                            src="../images/logotipo_instagram.png" alt="instagram icon"></a>
+                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i id="youtube" class="bi bi-youtube"></i></a>
+                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><i id="facebook" class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i id="instagram" class="bi bi-instagram"></i></a>
                 </div>
                 <div>
                     <h3>Contacto</h3>
