--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Nekzus Game Store</title>
 </head>
 
@@ -42,15 +42,15 @@
         </div>
     </header>
     <!-- Menu de navegacion -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="cart">
-                <h6>Solcito</h6>
+            <div class="cart nav-item mb-2 mb-lg-0">
+                <a class="nav-link" aria-current="page" href="./html/cart.html"><i class="bi bi-cart-fill"></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -70,28 +70,8 @@
                         <a class="nav-link" aria-current="page" href="./html/register.html">Registro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./html/cart.html">Carrito</a>
+                        <a class="cartBar nav-link" aria-current="page" href="./html/cart.html"><i class="bi bi-cart-fill"></i></a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li> -->
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li> -->
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -100,66 +80,70 @@
             </div>
         </div>
     </nav>
-    <!-- Imagen principal: futuro carrusel de imagenes -->
+    <!-- Imagen principal: carousel de imagenes -->
     <div class="container-flex">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
                     aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./images/slider_ForzaHorizon5.webp" class="d-block w-100" alt="slide1">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>FORZA HORIZON 5</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/slider_Borderlands2.webp" class="d-block w-100" alt="slide2">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
+                        <h5>BORDERLANDS 2</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/slider_RedDeadRedemption2.webp" class="d-block w-100" alt="slide3">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
+                        <h5>RED DEAD REDEMPTION 2</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/slider_TheWitcher3WildHunt.webp" class="d-block w-100" alt="slide4">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>THE WITCHER 3</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/slider_COD Modern Warfare.webp" class="d-block w-100" alt="slide5">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>COD MODERN WARFARE</h5>
                         <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions"
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
     </div>
-    <!-- <div class="sliderImages">
-        <img class="welcomeSlider" src="./images/slider_RedDeadRedemption2.webp" alt="slider bienvenida" />
-    </div> -->
-    <!-- <nav class="navbar">
-        <ul class="listInline">
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./html/products.html">Productos</a></li>
-            <li><a href="./html/contact.html">Contacto</a></li>
-            <li><a href="./html/login.html">Ingreso</a></li>
-            <li><a href="./html/register.html">Registro</a></li>
-            <li><a href="./html/cart.html">Carrito</a></li>
-        </ul>
-    </nav> -->
-    <!-- Listado de productos destacados: a futuro listado horizontal -->
     <main class="container-flex">
         <section class="containerContentHome">
             <div class="subtitle">
@@ -174,12 +158,6 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product1">
-                    <img src="./images/pda_COD Modern Warfare.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product2">
                     <img src="./images/pda_BioShock Infinite.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -188,12 +166,6 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product2">
-                    <img src="./images/pda_BioShock Infinite.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product3">
                     <img src="./images/pda_Borderlands 2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -202,12 +174,6 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product3">
-                    <img src="./images/pda_Borderlands 2.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product4">
                     <img src="./images/pda_Destiny 2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -216,14 +182,32 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product4">
-                    <img src="./images/pda_Destiny 2.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product5">
                     <img src="./images/pda_Grand Theft Auto V.webp" class="card-img-top" alt="producto" />
+                    <div class="card-body">
+                        <h5 class="card-title">Producto</h5>
+                        <p class="card-text">$5000</p>
+                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="productCardHome card product6">
+                    <img src="./images/pda_Hitman 3.webp" class="card-img-top" alt="producto" />
+                    <div class="card-body">
+                        <h5 class="card-title">Producto</h5>
+                        <p class="card-text">$5000</p>
+                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="productCardHome card product7">
+                    <img src="./images/pda_Fallout 4.webp" class="card-img-top" alt="producto" />
+                    <div class="card-body">
+                        <h5 class="card-title">Producto</h5>
+                        <p class="card-text">$5000</p>
+                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="productCardHome card product8">
+                    <img src="./images/pda_The Witcher 3 Wild Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -246,12 +230,6 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product1">
-                    <img src="./images/pda_BioShock.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product2">
                     <img src="./images/pda_DOOM (2016).webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -260,12 +238,6 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product2">
-                    <img src="./images/pda_DOOM (2016).webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product3">
                     <img src="./images/pda_The Witcher 3 Wild Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -274,12 +246,6 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product3">
-                    <img src="./images/pda_The Witcher 3 Wild Hunt.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product4">
                     <img src="./images/pda_Half-Life 2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -288,14 +254,32 @@
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <!-- <div class="productCardHome card product4">
-                    <img src="./images/pda_Half-Life 2.webp" alt="producto">
-                    <h4>Producto</h4>
-                    <p>$5000</p>
-                    <button type="submit" class="btn btn-outline-info ">Agregar al carrito</button>
-                </div> -->
                 <div class="productCardHome card product5">
                     <img src="./images/pda_Hitman 3.webp" class="card-img-top" alt="producto" />
+                    <div class="card-body">
+                        <h5 class="card-title">Producto</h5>
+                        <p class="card-text">$5000</p>
+                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="productCardHome card product6">
+                    <img src="./images/pda_PAYDAY 2.webp" class="card-img-top" alt="producto" />
+                    <div class="card-body">
+                        <h5 class="card-title">Producto</h5>
+                        <p class="card-text">$5000</p>
+                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="productCardHome card product7">
+                    <img src="./images/pda_Counter-Strike Global.webp" class="card-img-top" alt="producto" />
+                    <div class="card-body">
+                        <h5 class="card-title">Producto</h5>
+                        <p class="card-text">$5000</p>
+                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="productCardHome card product8">
+                    <img src="./images/pda_Grand Theft Auto V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -305,7 +289,6 @@
             </div>
         </section>
     </main>
-
     <footer>
         <div class="footerSocials">
             <!-- Sobre nosotros -->
@@ -329,12 +312,9 @@
                 </div>
                 <div>
                     <h3>Síguenos en:</h3>
-                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><img
-                            src="./images/logotipo_youtube.png" alt="youtube icon" /></a>
-                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><img
-                            src="./images/logo_facebook.png" alt="facebook icon" /></a>
-                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><img
-                            src="./images/logotipo_instagram.png" alt="instagram icon" /></a>
+                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i id="youtube" class="bi bi-youtube"></i></a>
+                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><i id="facebook" class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i id="instagram" class="bi bi-instagram"></i></a>
                 </div>
                 <div>
                     <h3>Contacto</h3>
