Se trabaja sobre escalado rem

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </button>
         </div>
     </div>
-    <main class="container-flex">
+    <main>
         <!-- Listado de productos destacados: listado horizontal -->
         <section class="containerContentHome">
             <div class="subtitle">
