Se ajusta codigo css

--- a/html/products.html
+++ b/html/products.html
@@ -109,7 +109,7 @@
                 </select>
             </section>
             <!-- Productos -->
-            <div class="productCardHome card product1">
+            <div class="productCard card product1">
                 <img src="../images/pda_Tomb-Raider-(2013).webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -117,7 +117,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product2">
+            <div class="productCard card product2">
                 <img src="../images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -125,7 +125,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product3">
+            <div class="productCard card product3">
                 <img src="../images/pda_Red-Dead-Redemption-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -133,7 +133,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product4">
+            <div class="productCard card product4">
                 <img src="../images/pda_Portal.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -141,7 +141,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product5">
+            <div class="productCard card product5">
                 <img src="../images/pda_Portal-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -149,7 +149,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product6">
+            <div class="productCard card product6">
                 <img src="../images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -157,7 +157,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product7">
+            <div class="productCard card product7">
                 <img src="../images/pda_Limbo.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -165,7 +165,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product8">
+            <div class="productCard card product8">
                 <img src="../images/pda_Life-is-Strange.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -173,7 +173,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product9">
+            <div class="productCard card product9">
                 <img src="../images/pda_Left-4-Dead-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -181,7 +181,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product10">
+            <div class="productCard card product10">
                 <img src="../images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -189,7 +189,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product11">
+            <div class="productCard card product11">
                 <img src="../images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -197,7 +197,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product12">
+            <div class="productCard card product12">
                 <img src="../images/pda_Forza-Horizon-5.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -205,7 +205,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product13">
+            <div class="productCard card product13">
                 <img src="../images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -213,7 +213,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product14">
+            <div class="productCard card product14">
                 <img src="../images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -221,7 +221,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product15">
+            <div class="productCard card product15">
                 <img src="../images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -229,7 +229,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product16">
+            <div class="productCard card product16">
                 <img src="../images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -237,7 +237,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product17">
+            <div class="productCard card product17">
                 <img src="../images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -245,7 +245,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product18">
+            <div class="productCard card product18">
                 <img src="../images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -253,7 +253,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product19">
+            <div class="productCard card product19">
                 <img src="../images/pda_BioShock.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
@@ -261,7 +261,7 @@
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
             </div>
-            <div class="productCardHome card product20">
+            <div class="productCard card product20">
                 <img src="../images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
