--- a/html/products.html
+++ b/html/products.html
@@ -48,7 +48,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="cart nav-item mb-2 mb-lg-0">
-                <a class="nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
+                <a class="cartLink" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
                             <span class="visually-hidden"></span></span></i></a>
