Optimización del código

--- a/html/products.html
+++ b/html/products.html
@@ -19,7 +19,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <!-- Custom -->    
+    <!-- Custom -->
     <link rel="stylesheet" href="../css/style.css">
     <title>Nekzus Game Store</title>
 </head>
@@ -50,7 +50,7 @@
             <div class="cart nav-item mb-2 mb-lg-0">
                 <a class="cartLink" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                            class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                             <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -73,7 +73,7 @@
                     <li class="nav-item">
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
-                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                                    class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                                     <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
@@ -112,7 +112,7 @@
             <div class="productCard card product1">
                 <img src="../images/pda_Tomb-Raider-(2013).webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Tomb Raider (2013)</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -120,7 +120,7 @@
             <div class="productCard card product2">
                 <img src="../images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">The Witcher 3-Wild Hunt</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -128,7 +128,7 @@
             <div class="productCard card product3">
                 <img src="../images/pda_Red-Dead-Redemption-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Red Dead Redemption 2</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -136,7 +136,7 @@
             <div class="productCard card product4">
                 <img src="../images/pda_Portal.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Portal</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -144,7 +144,7 @@
             <div class="productCard card product5">
                 <img src="../images/pda_Portal-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Portal 2</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -152,7 +152,7 @@
             <div class="productCard card product6">
                 <img src="../images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">PAYDAY 2</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -160,7 +160,7 @@
             <div class="productCard card product7">
                 <img src="../images/pda_Limbo.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Limbo</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -168,7 +168,7 @@
             <div class="productCard card product8">
                 <img src="../images/pda_Life-is-Strange.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Life is Strange</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -176,7 +176,7 @@
             <div class="productCard card product9">
                 <img src="../images/pda_Left-4-Dead-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Left 4 Dead 2</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -184,7 +184,7 @@
             <div class="productCard card product10">
                 <img src="../images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Hitman 3</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -192,7 +192,7 @@
             <div class="productCard card product11">
                 <img src="../images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Grand Theft Auto V</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -200,7 +200,7 @@
             <div class="productCard card product12">
                 <img src="../images/pda_Forza-Horizon-5.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Forza Horizon 5</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -208,7 +208,7 @@
             <div class="productCard card product13">
                 <img src="../images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Fallout 4</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -216,7 +216,7 @@
             <div class="productCard card product14">
                 <img src="../images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">DOOM (2016)</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -224,7 +224,7 @@
             <div class="productCard card product15">
                 <img src="../images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Destiny 2</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -232,7 +232,7 @@
             <div class="productCard card product16">
                 <img src="../images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Counter Strike Global</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -240,7 +240,7 @@
             <div class="productCard card product17">
                 <img src="../images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">COD Modern Warfare</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -248,7 +248,7 @@
             <div class="productCard card product18">
                 <img src="../images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Borderlands 2</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -256,7 +256,7 @@
             <div class="productCard card product19">
                 <img src="../images/pda_BioShock.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">BioShock</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -264,7 +264,7 @@
             <div class="productCard card product20">
                 <img src="../images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">BioShock Infinite</h5>
                     <p class="card-text">$5000</p>
                     <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                 </div>
@@ -322,7 +322,7 @@
                     <p>Nekzus Game Store</p>
                     <p>Avenida Siempreviva, 742</p>
                     <p>Ciudad de Springfield, Estados Unidos</p>
-                    <p>5555555555</p>
+                    <p class="telephone"><i class="bi bi-telephone-fill"> </i>5555-555555</p>
                 </div>
             </section>
         </div>
