--- a/html/register.html
+++ b/html/register.html
@@ -50,7 +50,7 @@
             <div class="cart nav-item mb-2 mb-lg-0">
                 <a class="cartLink" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                            class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                             <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -73,7 +73,7 @@
                     <li class="nav-item">
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
-                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                                    class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                                     <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
@@ -167,7 +167,7 @@
                     <p>Nekzus Game Store</p>
                     <p>Avenida Siempreviva, 742</p>
                     <p>Ciudad de Springfield, Estados Unidos</p>
-                    <p>5555555555</p>
+                    <p class="telephone"><i class="bi bi-telephone-fill">  </i>5555-555555</p>
                 </div>
             </section>
         </div>
