--- a/html/contact.html
+++ b/html/contact.html
@@ -19,7 +19,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <!-- Custom -->    
+    <!-- Custom -->
     <link rel="stylesheet" href="../css/style.css">
     <title>Nekzus Game Store</title>
 </head>
@@ -50,7 +50,7 @@
             <div class="cart nav-item mb-2 mb-lg-0">
                 <a class="cartLink" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                            class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                             <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -73,7 +73,7 @@
                     <li class="nav-item">
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
-                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                                    class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                                     <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
@@ -120,7 +120,7 @@
                 <h3 class="contentSubtitle">Video</h3>
             </div>
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uO90A7jTVTo"
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oDKKu7hxT78"
                     allowfullscreen></iframe>
             </div>
             <div class="subtitleMap">
@@ -184,7 +184,7 @@
                     <p>Nekzus Game Store</p>
                     <p>Avenida Siempreviva, 742</p>
                     <p>Ciudad de Springfield, Estados Unidos</p>
-                    <p>5555555555</p>
+                    <p class="telephone"><i class="bi bi-telephone-fill"> </i>5555-555555</p>
                 </div>
             </section>
         </div>
