--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-     <!-- Custom -->
+    <!-- Custom -->
     <link rel="stylesheet" href="./css/style.css" />
     <title>Nekzus Game Store</title>
 </head>
@@ -52,7 +52,7 @@
             <div class="cart nav-item mb-2 mb-lg-0">
                 <a class="cartLink" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                            class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                             <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -75,7 +75,7 @@
                     <li class="nav-item">
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
-                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
+                                    class="position-absolute top-0 start-100 translate-middle badgeCart badge rounded-pill">0
                                     <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
@@ -158,7 +158,7 @@
                 <div class="productCardHome card product1">
                     <img src="./images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">COD Modern Warfare</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -166,7 +166,7 @@
                 <div class="productCardHome card product2">
                     <img src="./images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">BioShock Infinite</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -174,7 +174,7 @@
                 <div class="productCardHome card product3">
                     <img src="./images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Borderlands 2</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -182,7 +182,7 @@
                 <div class="productCardHome card product4">
                     <img src="./images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Destiny 2</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -190,7 +190,7 @@
                 <div class="productCardHome card product5">
                     <img src="./images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Grand Theft Auto V</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -198,7 +198,7 @@
                 <div class="productCardHome card product6">
                     <img src="./images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Hitman 3</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -206,7 +206,7 @@
                 <div class="productCardHome card product7">
                     <img src="./images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Fallout 4</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -214,7 +214,7 @@
                 <div class="productCardHome card product8">
                     <img src="./images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -227,66 +227,90 @@
                 <h3 class="contentSubtitle">Ofertas disponibles</h3>
             </div>
             <div class="productsHome">
-                <div class="productCardHome card product1">
+                <div class="productCardHome card product1 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">25%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_BioShock.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">BioShock</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product2">
+                <div class="productCardHome card product2 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">15%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">DOOM (2016)</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product3">
+                <div class="productCardHome card product3 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">40%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product4">
+                <div class="productCardHome card product4 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">10%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Half-Life-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Half Life 2</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product5">
+                <div class="productCardHome card product5 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">5%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Hitman 3</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product6">
+                <div class="productCardHome card product6 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">25%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">PAYDAY 2</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product7">
+                <div class="productCardHome card product7 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">50%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Counter Strike Global</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="productCardHome card product8">
+                <div class="productCardHome card product8 position-relative">
+                    <span
+                        class="position-absolute top-1 right-1 start-90 translate-middle badgeOff badge rounded-pill">25%
+                        <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
-                        <h5 class="card-title">Producto</h5>
+                        <h5 class="card-title">Grand Theft Auto V</h5>
                         <p class="card-text">$5000</p>
                         <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
                     </div>
@@ -294,21 +318,21 @@
             </div>
         </section>
         <!-- Menu off-canvas carrito de compras -->
-            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="menuCart"
-                aria-labelledby="menuCartLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="menuCartLabel">Carrito de compras</h5>
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <h5 class="product">Producto</h5>
-                    <h5 class="price">Subtotal</h5>
-                    <h6 class="total">Total:</h6>
-                    <h6 class="totalPrice">$ total:</h6>
-                    <button type="button" class="btnBuy btn btn-outline-info">Comprar</button>
-                </div>
+        <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="menuCart"
+            aria-labelledby="menuCartLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="menuCartLabel">Carrito de compras</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
             </div>
+            <div class="offcanvas-body">
+                <h5 class="product">Producto</h5>
+                <h5 class="price">Subtotal</h5>
+                <h6 class="total">Total:</h6>
+                <h6 class="totalPrice">$ total:</h6>
+                <button type="button" class="btnBuy btn btn-outline-info">Comprar</button>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footerSocials">
@@ -345,7 +369,7 @@
                     <p>Nekzus Game Store</p>
                     <p>Avenida Siempreviva, 742</p>
                     <p>Ciudad de Springfield, Estados Unidos</p>
-                    <p>5555555555</p>
+                    <p class="telephone"><i class="bi bi-telephone-fill"> </i>5555-555555</p>
                 </div>
             </section>
         </div>
