--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <!-- Custom -->
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/animation.css" />
     <title>Nekzus Game Store</title>
 </head>
 
@@ -221,6 +222,24 @@
                 </div>
             </div>
         </section>
+        <section class="animationContainer">
+            <label>
+                <input type="radio" name="pink">
+                <div class="face"></div>
+            </label>
+            <label>
+                <input type="radio" name="green">
+                <div class="face"></div>
+            </label>
+            <label>
+                <input type="radio" name="pink">
+                <div class="face"></div>
+            </label>
+            <label>
+                <input type="radio" name="green">
+                <div class="face"></div>
+            </label>
+        </section>
         <!-- Listado de productos en oferta: listado horizontal -->
         <section class="containerContentHome">
             <div class="subtitle">
@@ -345,7 +364,6 @@
                     hasta los más nuevos.
                 </p>
             </section>
-            <hr />
             <!-- Redes sociales, newsletter y contacto -->
             <section class="sectionSocials">
                 <div class="newsletter">
