Se trabaja sobre código en scss

--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
         content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
     <!-- META KEYWORDS -->
     <meta name="keywords"
-        content="games, store, tienda, videojuegos, juegos, pc, playstation, xbox, nintendo, ps4, switch">
+        content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
 </head>
 
 <body>
@@ -98,18 +98,18 @@
             <div class="subtitleForm">
                 <h3 class="contentSubtitle">Inicia sesión</h3>
             </div>
-            <div class="formGroup centerItemsGrid">
+            <div class="formGroup centerItemsGrid" data-aos="fade-zoom-in" data-aos-delay="200" data-aos-duration="2000">
                 <h3>Introduce los datos de tu cuenta</h3>
                 <form class="form">
-                    <div class="mb-3 camp">
+                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                         <label for="e-mail" class="form-label">E-mail usuario</label>
                         <input type="email" class="form-control" id="e-mail" placeholder="Correo electronico">
                     </div>
-                    <div class="mb-3 camp">
+                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
                         <label for="password-1" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password-1" placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="btn btn-outline-info">Iniciar sesión</button>
+                    <button type="submit" class="btn btn-outline-info" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">Iniciar sesión</button>
                     <p>¿No tienes cuenta?<a href="./register.html"> Registrate</a></p>
                 </form>
             </div>
@@ -179,6 +179,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <!-- Script AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
